# marker

./: .gitignore  LICENSE  Makefile  README.md  automark  automark.txt  blah.yml  config.py  download.py  download_parallel.py  download_single.py  download_submissions.py  extract.sh  install.sh  lms-download  lms-download.py  lms-set-status  lms-upload-marks  lms-upload-marks.py  lms-upload-reports  lms-upload-reports.py  main.py  marker  marker.py  marksheet.py  prepare  prepare.py  prepare.sh  pyproject.toml  quercus.csv  quercus.py  requirements.txt  run.py  scratch.py  set_status.py  setup.py  testcases.py  upload_marks.py  upload_marks_parallel.py  upload_reports.py  (+1 more)
.github/workflows/: format.yaml
docs/source/: conf.py  index.rst
ex/: canvas copy.yaml  canvas.yaml  markus.yaml
lms/: __init__.py  canvas.py  markus.py  mest.py  test.json  test.py  upload_reports.py
marker/: __init__.py  main.py  marker.py  repl.py  settings.py
marker/commands/: delete.py  delete_reports.py  download.py  prepare.py  run.py  set_status.py  stats.py  upload_marks.py  upload_reports.py
marker/lms/: __init__.py  base.py  canvas.py  lms_base.py  markus.py  markus2.py
marker/repl/: console.py  repl.py  show_stats.py
marker/utils/: __init__.py  config.py  console.py  log.py  marksheet.py  report.py  tests.py  token.py
templates/: .extra-files  Makefile  tests.c  testsuite.csv
templates/C/: Makefile  README.md  config.yml  functions.c  marker.h  tests.c
templates/Python/: Makefile  README.md  config.yml  functions.py  marker.h  (+1 more)
testing/: marksheet.yml
web/: app.py
(+109 files in other folders)
