[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "marker"
author = "Mustafa Quraish"
author-email = "mustafa@cs.toronto.edu"
home-page = "https://github.com/mustafaquraish/marker"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Unix",
]
description-file = "README.md"
requires-python=">=3.8"
requires=[
    "aiofiles == 0.6.0",
    "aiohttp == 3.7.4",
    "cmd2 == 1.5.0",
    "Jinja2 == 3.0.0",
    "PyYAML == 5.4.1",
    "requests == 2.25.1",
    "rich == 10.2.0",
]

[tool.flit.scripts]
marker = "marker.repl.repl:main"
